# DetectionDatasetAnnotator

./: .gitignore  README.md  requirements.txt
.github/workflows/: ci-cd.yml
doc/: CONFIGURE.md  INSTALL.md  TESTING.md  UPLOAD.md
refman/: generate-refman.sh
src/: README.md  program_launcher_annotator.py  program_launcher_project.py  pyproject.toml  toml_gen.py
src/detection_dataset_annotator/: about.py  annotator.py  create_project.py  desktop.py  program.py  program_annotator.py  program_project.py
