[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "detection_dataset_annotator"
version = "0.1.6"
description = "A slight annotator of detection datasets"
readme = "README.md"
authors = [{name = "Fernando Pujaico Rivera", email = "fernando.pujaico.rivera@gmail.com"}]
maintainers = [{name = "Fernando Pujaico Rivera", email = "fernando.pujaico.rivera@gmail.com"}]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-only WITH Classpath-Exception-2.0 OR BSD-3-Clause"
license-files = ["LICENSE"]
keywords = ["dataset", "annotator", "yolo"]
dependencies = [
    "PyQt5",
    "GitPython",
    "natsort"
]

[project.urls]
"Bug Reports" = "https://github.com/trucomanx/DetectionDatasetAnnotator/issues"
"Funding" = "https://trucomanx.github.io/en/funding.html"
"Documentation" = "https://github.com/trucomanx/DetectionDatasetAnnotator/tree/main/doc"
"Source" = "https://github.com/trucomanx/DetectionDatasetAnnotator"

[project.scripts]
"detection-dataset-annotator" = "detection_dataset_annotator.program_annotator:main"
"detection-dataset-project" = "detection_dataset_annotator.program_project:main"

[tool.setuptools]
packages = ["detection_dataset_annotator", "detection_dataset_annotator.modules"]

[tool.setuptools.package-data]
"detection_dataset_annotator" = ["icons/logo.png"]
